--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.9.1",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -12,13 +13,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-redux": "8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "redux-logger": "^3.0.6",
     "styled": "^1.0.0",
+    "swiper": "^8.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
